small changes to rag pipeline

--- a/notebooks/RAG_Pipeline.ipynb
+++ b/notebooks/RAG_Pipeline.ipynb
@@ -18,13 +18,16 @@
    "source": [
     "# RAG Pipeline\n",
     "\n",
+    "(For Question/Answer (text2text) applications)\n",
+    "\n",
     "## Structure:\n",
     "\n",
     " 1. Extracting text from a .pdf document\n",
-    " 2. Chunking \n",
-    " 3. Embeddings\n",
-    " 4. Vector DB\n",
-    " 5. RAG Query \n"
+    " 2. Structuring the text \n",
+    " 3. Creating embeddings and storing them\n",
+    " 4. LLM\n",
+    " 5. RAG Pipeline\n",
+    " 6. QA (Test the pipeline!)  \n"
    ]
   },
   {
@@ -83,9 +86,10 @@
     "docs_text = pdf_loader.load()\n",
     "print(f\"Loaded {len(docs_text)} documents from {path}\")\n",
     "\n",
-    "ocr_loader = UnstructuredPDFLoader(path)\n",
-    "ocr_docs_text = ocr_loader.load()\n",
-    "print(f\"Loaded {len(ocr_docs_text)} documents from {path}\")"
+    "# If the pdf_loader fails, you can try using UnstructuredPDFLoader\n",
+    "# ocr_loader = UnstructuredPDFLoader(path)\n",
+    "# ocr_docs_text = ocr_loader.load()\n",
+    "# print(f\"Loaded {len(ocr_docs_text)} documents from {path}\")"
    ]
   },
   {
@@ -93,7 +97,7 @@
    "id": "423be741",
    "metadata": {},
    "source": [
-    "### Structuring the text\n",
+    "### 2. Structuring the text\n",
     "To efficiently make a RAG pipeline we want to split this data up into to _chunks_ so that when we add them to the LLM prompt, we only pass the important information and not waste tokens.\n",
     "\n",
     "A very basic implementation is the following with the _RecursiveCharacterTextSplitter_ also from the Langchain module.   \n",
@@ -143,7 +147,7 @@
    "id": "575a6587",
    "metadata": {},
    "source": [
-    "### Creating embeddings and storing them\n",
+    "### 3. Creating embeddings and storing them\n",
     "\n",
     "Now we have the separate chunks of information that we may want to pass to a NN/LLM.   \n",
     "\n",
@@ -188,7 +192,7 @@
    "id": "2e234e0a",
    "metadata": {},
    "source": [
-    "### LLM\n",
+    "### 4. LLM\n",
     "\n",
     "Now that we have the RAG Database in place, all we need is the LLM. For this we will use open source models found on Huggingface such as Google's _flan-t5-base_.   \n",
     "The implementation pipeline is already built in the Langchain module as well.\n",
@@ -223,7 +227,7 @@
    "id": "7cf9c8a9",
    "metadata": {},
    "source": [
-    "### RAG Pipeline\n",
+    "### 5. RAG Pipeline\n",
     "\n",
     "Now that we have the LLM and the Vector DB, we can bring it all together in a  simple RAG-pipeline.    \n",
     "In the Langchain module the _RetrievalQA_ class brings the LLM pipeline and the vector database together so that on each prompt that is passed it adds the chunks closest in meanings to the prompt."
@@ -270,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"What is the name of the company?\""
+    "query = \"What was apples emissions in 2024\""
    ]
   },
   {
@@ -283,6 +287,14 @@
     "answer = qa.run(query)\n",
     "print(answer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ac62cd0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
