ESG Pipeline V1 Done

--- a/notebooks/ESG_Metric.ipynb
+++ b/notebooks/ESG_Metric.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 83,
    "id": "b997ed63",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 84,
    "id": "07bba6d5",
    "metadata": {},
    "outputs": [],
@@ -80,69 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "d45eb65d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "/Users/carloteufel/Documents/Projects/FinRAG/notebooks/../src/utils/utils.py:14: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  dfs = pd.read_html(page_content)\n",
-      "Device set to use mps:0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rag_pipeline = RagPipeline()\n",
-    "data = rag_pipeline.load_pdf(pdf_path='../data/raw/ESG/NVDA.pdf')\n",
+    "data = rag_pipeline.load_pdf(pdf_path='../data/raw/ESG/UNILEVER.pdf')\n",
     "docs = rag_pipeline.chunk_text(documents=data,chunk_size=1000,chunk_overlap=500)\n",
     "vectordb = rag_pipeline.create_vectordb(chunks=docs,search_kwargs={\"k\" :3},embedding_model='sentence-transformers/all-mpnet-base-v2')\n",
     "llm = rag_pipeline.load_llm( llm_model='google/flan-t5-large')"
@@ -181,7 +125,7 @@
    "id": "7a1f9553",
    "metadata": {},
    "source": [
-    "#### Metric: Environmental Intensity Score (EIS) — 0 to 10\n",
+    "#### Metric: Environmental Intensity Score (EIS) (lower = better)\n",
     "\n",
     "**Inputs**  \n",
     "- **CI**: Carbon intensity (tonnes CO₂e per million USD revenue)  \n",
@@ -191,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "5cab9a9c",
    "metadata": {},
    "outputs": [],
@@ -217,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "e25f727d",
    "metadata": {},
    "outputs": [
@@ -246,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "b86d9e14",
    "metadata": {},
    "outputs": [
@@ -283,7 +227,7 @@
     "                'unit' : 'metric tons CO2e/million USD revenue'},\n",
     "                {'metric': 'CO2 or carbon emissions in 2024',\n",
     "                'unit': 'metric tons CO2e'},\n",
-    "                {'metric': 'water intensity in 2024',\n",
+    "                {'metric': 'WATER INTENSITY in 2024',\n",
     "                'unit': 'gallons/million USD revenue'},\n",
     "                {'metric': 'water consumption in 2024',\n",
     "                'unit': 'gallons'},\n",
@@ -294,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "4aa58aed",
    "metadata": {},
    "outputs": [
@@ -304,10 +248,16 @@
      "text": [
       "{Metric is Energy intensity (Energy used MWh/$M revenue), FY24 is 10.1, FY23 is 18.4, FY22 is 15.8, Reference Indicator is GRI 302-3}\n",
       "{Metric is Reduction of GHG emissions, FY24 is 2023 CDP Climate Change, FY23 is Response, pp. 29-46, 71, FY22 is , Reference Indicator is SASB TC-SC-110a.2}\n",
-      "{Product Energy Efficiency is Greenhouse Gas Emissions, 10 is }\n",
+      "{Metric is Reduction of energy consumption, FY24 is 2023 CDP Climate Change Response, pp. 38-40, FY23 is 2023 CDP Climate Change Response, pp. 38-40, FY22 is , Reference Indicator is UNGC E9}\n",
+      "{Metric is Reduction of GHG emissions, FY24 is 2023 CDP Climate Change, FY23 is Response, pp. 29-46, 71, FY22 is , Reference Indicator is SASB TC-SC-110a.2}\n",
+      "{Metric is Reduction of energy consumption, FY24 is 2023 CDP Climate Change Response, pp. 38-40, FY23 is 2023 CDP Climate Change Response, pp. 38-40, FY22 is , Reference Indicator is UNGC E9}\n",
+      "{Metric is S3HG Emissions! (MT CO,e), FY24 is S3HG Emissions! (MT CO,e), FY23 is S3HG Emissions! (MT CO,e), FY22 is S3HG Emissions! (MT CO,e), Reference Indicator is S3HG Emissions! (MT CO,e)}\n",
       "{Metric is Water consumption, FY24 is 134219, FY23 is 197849, FY22 is 239780, Reference Indicator is GRI 303-5}\n",
       "{Metric is Water consumption, FY24 is , FY23 is , FY22 is , Reference Indicator is SASB TC-SC-140a.1}\n",
       "{Metric is Interactions with water as a shared resource, FY24 is Water Conservation, FY23 is , FY22 is , Reference Indicator is GRI 303-1}\n",
+      "{Metric is Water consumption, FY24 is 134219, FY23 is 197849, FY22 is 239780, Reference Indicator is GRI 303-5}\n",
+      "{Metric is Water consumption, FY24 is , FY23 is , FY22 is , Reference Indicator is SASB TC-SC-140a.1}\n",
+      "{Metric is Non-renewable electricity purchased, FY24 is 134287, FY23 is 249429, FY22 is 251760, Reference Indicator is UNGC E9}\n",
       "{Metric is Landfill diversion rate (%), FY24 is 71%, FY23 is 58%, FY22 is 56%, Reference Indicator is GRI 306-4}\n",
       "{Metric is General waste recycled, FY24 is 374, FY23 is 295, FY22 is 127, Reference Indicator is }\n",
       "{Metric is Category 5 is Waste generated in operations?, FY24 is 617, FY23 is 579, FY22 is 291, Reference Indicator is }\n"
@@ -337,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "6ff5caaf",
    "metadata": {},
    "outputs": [],
@@ -347,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "e6f162f6",
    "metadata": {},
    "outputs": [],
@@ -358,17 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "73f089ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10.1, 134219.0, 0.71]"
+       "[10.1, None, 134219.0, 134219.0, 0.71]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,17 +329,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "b5e617d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'float' and 'NoneType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[82]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m metric_score = \u001b[43mmetric\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[53]\u001b[39m\u001b[32m, line 6\u001b[39m, in \u001b[36mmetric\u001b[39m\u001b[34m(carbon_intensity, water_intensity, recycling_rate)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mmetric\u001b[39m(carbon_intensity,water_intensity,recycling_rate):\n\u001b[32m      2\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[33;03m    This function calculates the ESG score based on carbon intensity, water intensity, and recycling rate.\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[33;03m    The formula used is a simple weighted sum of the three factors.\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     score = (\u001b[32m0.5\u001b[39m * carbon_intensity) + (\u001b[32;43m0.3\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mwater_intensity\u001b[49m) + (\u001b[32m2\u001b[39m * recycling_rate)\n\u001b[32m      7\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m score\n",
+      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for *: 'float' and 'NoneType'"
+     ]
+    }
+   ],
    "source": [
     "metric_score = metric(output[0], output[1], output[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "721b7675",
    "metadata": {},
    "outputs": [
