--- a/notebooks/ESG_Gemini.ipynb
+++ b/notebooks/ESG_Gemini.ipynb
@@ -9,15 +9,17 @@
     "\n",
     "## Structure\n",
     "\n",
-    "### AAPL\n",
+    "### 1. AAPL\n",
     "\n",
-    "1. Imports\n",
-    "2. Data Extraction\n",
-    "3. Prompt Definition\n",
-    "4. Response Retrieval\n",
+    "1.1 Imports    \n",
+    "1.2 Data Extraction      \n",
+    "1.3 Prompt Definition     \n",
+    "1.4 Response Retrieval     \n",
     "\n",
-    "### Pipeline \n",
-    "1. Metric "
+    "### 2. Pipeline \n",
+    "2.1 Using all PDFs     \n",
+    "2.2 Metric      \n",
+    "2.3 LLM Approach      \n"
    ]
   },
   {
@@ -290,6 +292,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b7a8ce9",
+   "metadata": {},
+   "source": [
+    "## 2.1 Using all pdfs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "8f6e6862",
@@ -449,7 +459,7 @@
    "id": "b3744fbd",
    "metadata": {},
    "source": [
-    "## 2.1 Metric\n",
+    "## 2.2 Metric\n",
     "\n",
     "To compare the different Company reports we need to define a rubric to compare. For this you choose arbitrary metrics the following is just one example:    \n",
     "- For this we want to take into account the emissions performance, more specifcally how well a company does in decarbonizing its operations.   \n",
@@ -540,7 +550,7 @@
    "id": "56045561",
    "metadata": {},
    "source": [
-    "## 2.2 LLM approach:"
+    "## 2.3 LLM approach:"
    ]
   },
   {
@@ -647,68 +657,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0644bc80",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'Company': 'Swiss Re',\n",
-       "  'EmissionsPerformance': 4,\n",
-       "  'CleanEnergy': 5,\n",
-       "  'Recycling': 3,\n",
-       "  'Robustness': 3},\n",
-       " {'Company': 'Microsoft',\n",
-       "  'EmissionsPerformance': 1,\n",
-       "  'CleanEnergy': 3,\n",
-       "  'Recycling': 4,\n",
-       "  'Robustness': 3},\n",
-       " {'Company': 'ABB Ltd',\n",
-       "  'EmissionsPerformance': 4,\n",
-       "  'CleanEnergy': 4,\n",
-       "  'Recycling': 2,\n",
-       "  'Robustness': 3},\n",
-       " {'Company': 'UBS Group AG',\n",
-       "  'EmissionsPerformance': 3,\n",
-       "  'CleanEnergy': 4,\n",
-       "  'Recycling': 3,\n",
-       "  'Robustness': 3},\n",
-       " {'Company': 'Apple Inc.',\n",
-       "  'EmissionsPerformance': 5,\n",
-       "  'CleanEnergy': 2,\n",
-       "  'Recycling': 3,\n",
-       "  'Robustness': 0},\n",
-       " {'Company': 'Google',\n",
-       "  'EmissionsPerformance': 1,\n",
-       "  'CleanEnergy': 5,\n",
-       "  'Recycling': 4,\n",
-       "  'Robustness': 2},\n",
-       " {'Company': 'Broadcom Inc.',\n",
-       "  'EmissionsPerformance': 3,\n",
-       "  'CleanEnergy': 0,\n",
-       "  'Recycling': 2,\n",
-       "  'Robustness': 1},\n",
-       " {'Company': 'NVIDIA',\n",
-       "  'EmissionsPerformance': 1,\n",
-       "  'CleanEnergy': 3,\n",
-       "  'Recycling': 4,\n",
-       "  'Robustness': 2}]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import ast\n",
-    "import json5\n",
-    "\n",
+    "### Post-processing the output\n",
     "metrics_text = [metric.text.replace(\"```json\", \"\").replace(\"```\", \"\") for metric in output]\n",
     "metrics_text = [ast.literal_eval(f\"'''{text}'''\") for text in metrics_text]\n",
-    "metrics_text = [json5.loads(text) for text in metrics_text]\n",
-    "metrics_text"
+    "metrics_text = [json5.loads(text) for text in metrics_text]"
    ]
   },
   {
@@ -721,67 +678,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "ad9d067e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "\n",
-    "def plot_ESG_metric(metric_list: list = None):\n",
-    "    \"\"\"\n",
-    "    Plots ESG component scores as a stacked bar chart and annotates each bar\n",
-    "    with the total ESG score (average of components).\n",
-    "\n",
-    "    Args:\n",
-    "        metric_list (list): List of dicts, each dict contains ESG metrics for one company.\n",
-    "    \"\"\"\n",
-    "    if not metric_list:\n",
-    "        print(\"No data provided.\")\n",
-    "        return\n",
-    "\n",
-    "    # Create DataFrame\n",
-    "    df = pd.DataFrame(metric_list)\n",
-    "\n",
-    "    # Ensure Company column exists\n",
-    "    if 'Company' not in df.columns:\n",
-    "        df['Company'] = [f'Company {i+1}' for i in range(len(df))]\n",
-    "\n",
-    "    # Reorder columns: Company last\n",
-    "    company_col = df.pop('Company')\n",
-    "    df.insert(0, 'Company', company_col)\n",
-    "\n",
-    "    # Define ESG metrics (all columns except 'Company')\n",
-    "    metric_columns = [col for col in df.columns if col != 'Company']\n",
-    "\n",
-    "    # Compute ESG total score (mean)\n",
-    "    df['Total_ESG'] = df[metric_columns].mean(axis=1)\n",
-    "\n",
-    "    # Set index to Company for plotting\n",
-    "    df_plot = df.set_index('Company')[metric_columns]\n",
-    "\n",
-    "    # Plot stacked bar chart\n",
-    "    ax = df_plot.plot(kind='bar', stacked=True, figsize=(10, 6), colormap='viridis')\n",
-    "\n",
-    "    # Annotate total ESG score on top of each bar\n",
-    "    for idx, total in enumerate(df['Total_ESG']):\n",
-    "        ax.text(idx, df_plot.iloc[idx].sum() + 1, f\"{total:.1f}\", \n",
-    "                ha='center', va='bottom', fontsize=10, fontweight='bold')\n",
-    "\n",
-    "    plt.title(\"ESG Component Breakdown and Total ESG Score per Company\", fontsize=14)\n",
-    "    plt.xlabel(\"Company\", fontsize=12)\n",
-    "    plt.ylabel(\"Score\", fontsize=12)\n",
-    "    plt.legend(title=\"ESG Component\", bbox_to_anchor=(1.05, 1), loc='upper left')\n",
-    "    plt.ylim(0, df_plot.sum(axis=1).max() * 1.15)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "3e38aa33",
    "metadata": {},
    "outputs": [
     {
@@ -796,16 +694,9 @@
     }
    ],
    "source": [
+    "from src.utils.utils import plot_ESG_metric\n",
     "plot_ESG_metric(metrics_text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f597db4d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
